tests/implicit_coercion_specifiers_wrap_extra_param_poly.test
let _ = fun[C[+]] implicit{C: _ Q} Q: ([T; W]. {x: T; mut y: W} => C[T]) -> 0;
####
TypeError: Invalid implicit coercion definition. Coercion parameters are not uniquely determined by input type.
let _ = fun[C[+]] implicit{C: _ Q} Q: ([T; W]. {x: T; mut y: W} => C[T]) -> 0;
                                ^
